--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_svg: ^2.0.10
+
+  google_fonts: ^6.3.2
+
+  country_picker: ^2.0.26
+  language_picker: ^0.4.5
+  image_picker: ^1.1.2
+
+  pinput: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-  google_fonts: ^6.3.2
 
 dev_dependencies:
   flutter_test:
