--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,11 @@ dependencies:
   pinput: ^4.0.0
 
   lucide_icons_flutter: ^3.1.5
-
+  smooth_page_indicator: ^1.1.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  font_awesome_flutter: ^10.9.1
 
 dev_dependencies:
   flutter_test:
