--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
 
   lucide_icons_flutter: ^3.1.5
   smooth_page_indicator: ^1.1.0
+  flutter_screenutil: ^5.9.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
