--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
 
   pinput: ^4.0.0
 
+  supabase_flutter: ^1.0.0
   lucide_icons_flutter: ^3.1.5
   smooth_page_indicator: ^1.1.0
   flutter_screenutil: ^5.9.0
@@ -47,6 +48,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   font_awesome_flutter: ^10.9.1
   intl: ^0.20.2
+  flutter_dotenv: ^6.0.0
 
 dev_dependencies:
   flutter_test:
